2010-09-29  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        queryCommandValue "formatBlock" always returns false
        https://bugs.webkit.org/show_bug.cgi?id=21305

        Implemented queryCommandValue('formatBlock'). We match the Firefox's behavior exactly
        because Firefox and Internet Explorer support the same set of elements
        (address, h1, h2, h3, h4, h5, h6, and p) and Firefox's behavior is more compatible with Opera.
        See the bug for the detailed discussion.

        WebKit's implementation returns the local name of the lowest common ancestor
        of the selection with the tag name address, h1, h2, h3, h4, h5, h6, or p.
        It returns "" when there is no such an ancestor or there is no selection.

        Test: editing/execCommand/query-format-block.html

        * editing/Editor.cpp:
        (WebCore::isElementForFormatBlockCommand):
        (WebCore::Editor::elementForFormatBlockCommand):
        * editing/Editor.h:
        * editing/EditorCommand.cpp:
        (WebCore::valueFormatBlock):
        (WebCore::createCommandMap):
2010-09-29  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        queryCommandValue "formatBlock" always returns false
        https://bugs.webkit.org/show_bug.cgi?id=21305

        Added a test for queryCommandValue('formatBlock').

        * editing/execCommand/query-format-block-expected.txt: Added.
        * editing/execCommand/query-format-block.html: Added.
        * editing/execCommand/script-tests/query-format-block.js: Added.
        (queryFormatBlock):
        (selectFirstPosition):
        (selectMiddleOfHelloWorld):


Canonical link: https://commits.webkit.org/59329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68670 268f45cc-cd09-0410-ab3c-d52691b4dbfc